# investretrospect

./: .env.example  .gitignore  InvestRetrospect.spec  InvestRetrospect.win.spec  README.md  USAGE.md  build_app.bat  build_app.sh  icon.icns  pyproject.toml  run.command
.claude/: settings.json
src/invest_retrospect/: __main__.py  ai.py  analyzer.py  cli.py  config.py  core.py  gui.py  ledger_db.py  manual.py  market.py  performance.py  prices.py  renderer.py  settings_store.py  types.py
src/invest_retrospect/brokers/: __init__.py  base.py  daishin.py  kis.py  kiwoom.py  ls.py  meritz.py
